--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -34,6 +34,7 @@
       font-size: 14px
       line-height: 18px
     &__item
+      max-width: 100%
       &_visible
         display: none
 
